=========
Changelog
=========

Version 4.10.31  (July ??, 2017)

- Added support for Cathedral of the Eternal Night dungeon.

- Added quests:
	- Cathedral of Eternal Night: Altar of the Aegis
	- Tomb of Sargeras: Azshara's Reach
	- Tomb of Sargeras: Life After Death
	- Tomb of Sargeras: Lost But Not Forgotten
	- Tomb of Sargeras: The Dread Stalker 
	- Tomb of Sargeras: The Deceiver's Downfall
	- Tomb of Sargeras: Pillars of Creation
	


Version 4.10.30  (March 28, 2017)

- TOC file updated for Patch 7.2.
- Additional updates to German translation.
- Updated map file names a bit for Atlas 1.39.00.
- Basic support for Tomb of Sargeras.  No quests yet.



Version 4.10.25  (March 19, 2017)

- Fixed a bug in the German language file that was causing a LUA error on load.  (Thanks Enigma_TL & bsmorgan)



Version 4.10.24  (March 18, 2017)

- German translation updated.



Version 4.10.23  (February 26, 2017)

- These updates are for the English translation.  German updates are pending.

- Added quests:
	- The Nighthold: Creepy Crawlers
	- The Nighthold: Ettin Your Foot In The Door
	- The Nighthold: Focused Power
	- The Nighthold: Gilded Guardian
	- The Nighthold: Love Tap
	- The Nighthold: Seeds of Destruction
	- The Nighthold: Supply Routes
	- The Nighthold: Wailing In The Night
	- The Nighthold: Touch of a Titan
	- The Nighthold: Talisman of the Shal'dorei (Normal)
	- The Nighthold: Talisman of the Shal'dorei (Heroic)
	- The Nighthold: Talisman of the Shal'dorei (Mythic)
	- The Nighthold: Cubic Conundrum
	- Karazhan: Return to Karazhan: Cubic Cynosure

- Removed the following Obsolete / Unavailable quests from the Warlords Legendary Questline.
	- Auchindoun: Tackling Teron'gor
	- Skyreach: Spires of the Betrayer
	- Bloodmaul Slag Mines: Core of Flame
	- The Everbloom: Core of Life
	- Grimrail Depot: Core of Iron
	- Highmaul: Empire's Fall
	- Highmaul: Legacy of the Sorcerer Kings
	- Blackrock Foundry: Heart of the Fury
	- Blackrock Foundry: Flamebender's Tome