@@ -63,7 +63,7 @@ AQINSTANZ = 1; -- currently shown instance-pic (see AtlasQuest_Instanzen.lua)
 AQINSTATM = ""; -- variable to check whether AQINSTANZ has changed (see function AtlasQuestSetTextandButtons())
 
 -- Sets the max number of instances and quests to check for. 
-local AQMAXINSTANCES = "172"
+local AQMAXINSTANCES = "174"
 local AQMAXQUESTS = "22"
 
 -- Set title for AtlasQuest side panel
